# app-wrs-coverage

./: .gitignore  Dockerfile  README.md  geoparquet.ipynb  pyproject.toml
.github/workflows/: build.yaml
cwl-workflow/: app-wrs-coverage.cwl
src/wrs_coverage/: app.py
